<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">"AHS分类回收体系"</string>
    <string name="login">"爱分类 爱回收"</string>
    <string name="app_title">"智能回收系统"</string>
    <string name="login_title">"回收员操作端"</string>
    <string name="login_input_account">"请输入账号"</string>
    <string name="login_input_password">"请输入密码"</string>
    <string name="login_error">"网络异常！"</string>
    <string name="login_btn">"登录"</string>
    <string name="login_description">"如有问题，请拨打400&#8211;8208820"</string>
    <string name="menu_new">"新建住户"</string>
    <string name="menu_order">"回收订单"</string>
    <string name="menu_credit">"积分兑换"</string>
    <string name="menu_history">"历史统计"</string>
    <string name="menu_ensure">"后端确认"</string>
    <string name="ensure_new">"录入住户"</string>
    <string name="new_order">"新建订单"</string>
    <string name="recyle_account">"回收账户："</string>
    <string name="recyle_account_msg">"请输入手机号"</string>
    <string name="recyle_scan_msg">"扫码或输入贴纸串码"</string>
    <string name="recyle_add">"添加"</string>
    <string name="recyle_add_categroy">"请选择种类"</string>
    <string name="recyle_add_title">"种类"</string>
    <string name="recyle_add_weight">"重量"</string>
    <string name="recyle_add_code">"请输入贴纸串码"</string>
    <string name="item_price_hint">"请输入"</string>
    <string name="title_order_detail">"订单详情"</string>
    <string name="title_ensure_order">"确认订单"</string>
    <string name="ensure_total_credit">"合计积分："</string>
    <string name="finishe_credit_before">"原有积分："</string>
    <string name="finishe_credit_end">"现有积分："</string>
    <string name="finishe_order">"完成订单"</string>
    <string name="ensure_good_title">"种类："</string>
    <string name="ensure_good_weight">"重量："</string>
    <string name="ensure_good_number">"数量："</string>
    <string name="ensure_good_credit">"积分："</string>
    <string name="default_good_number">"1袋"</string>
    <string name="default_good_name">"袋装回收物"</string>
    <string name="menu_credit_not_online">"暂未上线，敬请期待"</string>

    <string name="account_title">"账户编号"</string>
    <string name="account_msg">"请输入卡号"</string>
    <string name="account_no_found">"账号不存在"</string>
    <string name="owner_title">"住户姓名"</string>
    <string name="owner_msg">"住户称谓"</string>
    <string name="sex_title">"性别"</string>
    <string name="sex_male">"男"</string>
    <string name="sex_female">"女"</string>
    <string name="contact_title">"联系方式"</string>
    <string name="contact_msg">"请输入手机/座机号"</string>
    <string name="addr_title">"领奖住址"</string>
    <string name="addr_msg">"请填写详细地址"</string>
    <string name="invalid_msg">"请填写完整信息"</string>
    <string name="invalid_credit">"可用积分不足！"</string>
    <string name="invalid_code">"验证码错误"</string>
    <string name="last">"上一步"</string>
    <string name="next">"下一步"</string>
    <string name="addr_city_hint">"城市"</string>
    <string name="addr_district_hint">"区"</string>
    <string name="ensure">"确认"</string>
    <string name="cancel">"取消"</string>
    <string name="delete">"删除"</string>
    <string name="back">"返回"</string>
    <string name="dialog_left">"修改"</string>
    <string name="dialog_right">"确定"</string>
    <string name="dialog_login_msg">"是否退出当前帐号？"</string>
    <string name="ensure_ok_detail">"恭喜！账户录入已完成"</string>
    <string name="ensure_ok_order">"恭喜！订单已完成\n积分已入账"</string>
    <string name="ensure_ok_credit">"恭喜！兑换已完成"</string>
    <string name="ensure_fail_detail">"账户录入失败"</string>
    <string name="ensure_ok_back">"返回首页"</string>
    <string name="weight_unit">"kg"</string>
    <string name="pre_order_sn">"订单编号"</string>
    <string name="pre_order_time">"预约时间"</string>
    <string name="pre_order_category">"资源种类"</string>
    <string name="pre_order_number">"联系方式"</string>
    <string name="pre_order_manager">"回收人员"</string>
    <string name="pre_order_account">"回收账号"</string>
    <string name="pre_order_addr">"预约地址"</string>
    <string name="pre_order_addr_hint">"无预约地址"</string>
    <string name="default_user_name">"无住户姓名"</string>
    <string name="pre_order_comments">"备&#8195;&#8195;注"</string>
    <string name="pre_order_comment_msg">"我有有害垃圾，需要顺带回收"</string>
    <string name="pre_to_recyle">"开始回收"</string>
    <string name="history_title_today">"今日"</string>
    <string name="history_title_week">"本周"</string>
    <string name="history_title_month">"本月"</string>
    <string name="history_good_credit">"积分"</string>
    <string name="history_good_time">"日期"</string>
    <string name="history_total_credit">"合计："</string>
    <string name="history_total_credit_default">"0"</string>
    <string name="date_am">"上午"</string>
    <string name="date_pm">"下午"</string>
    <string name="credit_query_title">"积分查询"</string>
    <string name="credit_query">"查询"</string>
    <string name="credit_submit">"提交"</string>
    <string name="credit_input_phone">"请输入领奖手机号"</string>
    <string name="credit_phone">"账号手机"</string>
    <string name="credit_token">"验证码"</string>
    <string name="credit_input_token">"请输入验证码"</string>
    <string name="credit_token_btn">"获取验证码"</string>
    <string name="credit_token_again">"重发验证码"</string>
    <string name="credit_token_suffix">"秒"</string>
    <string name="credit_login_btn">"登录"</string>
    <string name="credit_code_error">"号码格式不正确"</string>
    <string name="credit_input_way">"兑换方式："</string>
    <string name="credit_input_msg">"消耗积分："</string>
    <string name="credit_input_more">"备&#8195;&#8195;注："</string>
    <string name="credit_input_hint">"请输入积分"</string>
    <string name="credit_input_name_hint">"备注"</string>
    <string name="credit_new_title">"积分详情"</string>
    <string name="credit_type_money">"兑换现金"</string>
    <string name="credit_type_good">"兑换礼品"</string>
    <string name="credit_finish">"兑换完成"</string>
    <string name="credit_continue">"继续兑换"</string>
    <string name="manage_title">"订单编号"</string>
    <string name="manage_owner">"操作人员"</string>
    <string name="manage_owner_info">"当前账号-"</string>
    <string name="manage_view">"查看订单详情"</string>
    <string name="manage_fail">"不合格"</string>
    <string name="manage_ok">"合格"</string>
    <string name="manage_refuse">"放弃订单"</string>
    <string name="manage_request_msg">"是否放弃订单?"</string>
    <string name="manage_receive">"认领订单"</string>
    <string name="recyle_type_none">"未领订单"</string>
    <string name="recyle_type_mine">"我的认领"</string>
    <string name="recyle_type_all">"所有认领"</string>

    <string name="msg_camera_framework_bug">"请设置里开启应用的相机权限"</string>
</resources>
