<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res/com.arcfun.aifenx"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:baselineAligned="false"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:weightSum="20" >

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="@dimen/menu_button_height"
        android:layout_marginEnd="@dimen/list_margin"
        android:layout_marginStart="@dimen/list_margin"
        android:layout_weight="11"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/create_del"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/recyle_add"
            android:src="@drawable/reduce" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingStart="@dimen/list_text_padding"
            android:text="@string/recyle_add_title"
            android:textColor="@color/ensure_title"
            android:textSize="@dimen/login_input_hint" />

        <com.arcfun.aifenx.view.SpinnerView
            android:id="@+id/item_category"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/listview_selector"
            android:paddingStart="@dimen/list_text_padding"
            app:text_hint="@string/recyle_add_categroy" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="@dimen/menu_button_height"
        android:layout_marginEnd="@dimen/list_margin"
        android:layout_weight="9" >

        <TextView
            android:id="@+id/item_title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/recyle_add_weight"
            android:textColor="@color/ensure_title"
            android:textSize="@dimen/login_input_hint" />

        <TextView
            android:id="@+id/item_unit"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:layout_alignParentRight="true"
            android:text="@string/weight_unit"
            android:textColor="@color/ensure_title"
            android:textSize="@dimen/login_input_hint" />

        <EditText
            android:id="@+id/item_price"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toRightOf="@id/item_title"
            android:layout_toLeftOf="@id/item_unit"
            android:background="@null"
            android:inputType="number|numberDecimal"
            android:labelFor="@id/item_price"
            android:paddingStart="@dimen/list_text_padding"
            android:hint="@string/item_price_hint"
            android:textColor="@color/login_title"
            android:textColorHint="@color/input_hint"
            android:textCursorDrawable="@drawable/cursor_color"
            android:textSize="@dimen/login_input_hint" />

    </RelativeLayout>

</LinearLayout>