<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:background="@color/white"
    android:orientation="vertical" >

    <include
        android:id="@+id/manager_actionbar"
        layout="@layout/actionbar_layout" />

    <View
        android:id="@+id/manager_divider"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_below="@id/manager_actionbar"
        android:background="@color/backgroud" />

    <LinearLayout
        android:id="@+id/manager_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:weightSum="2"
        android:background="@color/backgroud"
        android:paddingTop="1dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/manager_fail"
            android:layout_width="0dp"
            android:layout_height="@dimen/menu_button_height"
            android:background="@drawable/button_negative_selector"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/manage_fail"
            android:textColor="@color/login_title"
            android:textSize="@dimen/menu_text_size"
            style="?android:attr/buttonBarButtonStyle" />
        <Button
            android:id="@+id/manager_ok"
            android:layout_width="0dp"
            android:layout_height="@dimen/menu_button_height"
            android:background="@drawable/button_selector"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/manage_ok"
            android:textColor="@color/login_title"
            android:textSize="@dimen/menu_text_size"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/ll_manage_account"
        android:layout_width="match_parent"
        android:layout_height="@dimen/pre_order_title_height"
        android:layout_below="@id/manager_divider"
        android:paddingStart="@dimen/list_margin"
        android:paddingEnd="@dimen/list_margin"
        android:background="@color/white" >

        <TextView
            android:id="@+id/manager_account_title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:gravity="center_vertical"
            android:paddingStart="@dimen/list_text_padding"
            android:text="@string/pre_order_account"
            android:textColor="@color/ensure_title"
            android:textSize="@dimen/login_input_hint" />

        <TextView
            android:id="@+id/manage_account"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/list_ensure_margin"
            android:layout_toRightOf="@id/manager_account_title"
            android:gravity="center_vertical"
            android:hint="@string/manage_title"
            android:textColor="@color/dialog_info"
            android:textSize="@dimen/login_input_hint" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ll_manage_owner"
        android:layout_width="match_parent"
        android:layout_height="@dimen/pre_order_title_height"
        android:layout_below="@id/ll_manage_account"
        android:paddingStart="@dimen/list_margin"
        android:paddingEnd="@dimen/list_margin"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingStart="@dimen/list_text_padding"
            android:text="@string/manage_owner"
            android:textColor="@color/ensure_title"
            android:textSize="@dimen/login_input_hint" />

        <TextView
            android:id="@+id/manage_owner"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/list_ensure_margin"
            android:gravity="center_vertical"
            android:hint="@string/manage_owner_info"
            android:textColor="@color/dialog_info"
            android:textSize="@dimen/login_input_hint" />
    </LinearLayout>

    <View
        android:id="@+id/manage_account_divider"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_below="@id/ll_manage_owner"
        android:background="@color/backgroud" />

    <RelativeLayout
        android:id="@+id/ll_manage_category"
        android:layout_width="match_parent"
        android:layout_height="@dimen/pre_order_title_height"
        android:layout_below="@id/manage_account_divider"
        android:paddingStart="@dimen/list_margin"
        android:paddingEnd="@dimen/list_margin" >

        <TextView
            android:id="@+id/manage_category_title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:gravity="center_vertical"
            android:paddingStart="@dimen/list_text_padding"
            android:text="@string/ensure_good_title"
            android:textColor="@color/ensure_title"
            android:textSize="@dimen/login_input_hint" />

        <TextView
            android:id="@+id/manage_action"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:gravity="center_vertical"
            android:paddingEnd="@dimen/list_text_padding"
            android:visibility="gone"
            android:text="@string/manage_view"
            android:textColor="@color/yellow_default"
            android:textSize="@dimen/login_bottom" />

        <TextView
            android:id="@+id/manage_category"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/list_text_padding"
            android:layout_toRightOf="@id/manage_category_title"
            android:gravity="center_vertical"
            android:text="@string/default_good_name"
            android:textColor="@color/dialog_info"
            android:textSize="@dimen/login_input_hint" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ll_manage_unit"
        android:layout_width="match_parent"
        android:layout_height="@dimen/pre_order_title_height"
        android:layout_below="@id/ll_manage_category"
        android:paddingStart="@dimen/list_margin"
        android:paddingEnd="@dimen/list_margin"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/manage_unit"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingStart="@dimen/list_text_padding"
            android:text="@string/ensure_good_number"
            android:textColor="@color/ensure_title"
            android:textSize="@dimen/login_input_hint" />

        <TextView
            android:id="@+id/manage_point"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/list_text_padding"
            android:gravity="center_vertical"
            android:text="@string/default_good_number"
            android:textColor="@color/dialog_info"
            android:textSize="@dimen/login_input_hint" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_gravity="center"
        android:layout_below="@id/ll_manage_unit"
        android:layout_marginEnd="@dimen/list_margin"
        android:layout_marginStart="@dimen/list_margin"
        android:layout_marginTop="@dimen/list_margin"
        android:background="@drawable/dotted_line"
        android:layerType="software" />
</RelativeLayout>