<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <include layout="@layout/actionbar_layout" />

    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@color/backgroud" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center|center_vertical"
        android:layout_marginTop="-50dp"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/result_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/ensure_new"
            android:background="@drawable/succeed" />

        <TextView
            android:id="@+id/result_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/result_title_margin"
            android:layout_gravity="center"
            android:text="@string/ensure_ok_detail"
            android:textColor="@color/black"
            android:textSize="@dimen/menu_text_size" />

        <Button
            android:id="@+id/result_back"
            android:layout_width="@dimen/ensure_btn_width"
            android:layout_height="@dimen/ensure_btn_height"
            android:background="@drawable/rectangle_button_selector"
            android:layout_marginTop="@dimen/login_layout_margin"
            android:layout_gravity="center_horizontal"
            android:text="@string/ensure_ok_back"
            android:textColor="@color/login_title"
            android:textSize="@dimen/login_main" />
    </LinearLayout>

</LinearLayout>